force-app/main/default/objects/Scan__c/Scan__c.object-meta.xml
<CustomObject>
    <label>Scan</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Scan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>